1.99.2
- a TinyFCK/ajax bug was solved

1.99.1
- P4A_ICONS_PATH is now used to generate the spinner path
- PEAR::MDB2 was updated to 2.1.0
- PEAR::MDB2_Driver_mssql was updated to 1.1.0
- PEAR::MDB2_Driver_mysql was updated to 1.1.0
- PEAR::MDB2_Driver_mysqli was updated to 1.1.0
- PEAR::MDB2_Driver_oci8 was updated to 0.3.0
- PEAR::MDB2_Driver_pgsql was updated to 1.1.0
- PEAR::MDB2_Driver_sqlite was updated to 1.1.0
- beforeClick and afterClick were added to P4A_Table_Col class
- a bug was fixed in P4A_Canvas::getAsString();
- a bug with P4A_Mask::dropCSS() and P4A_Mask::dropTempCSS() was solved
- P4A_Date can now unformat dates with less then 4 digits year notation

1.99.0
- P4A_Filename2File was added to P4A Standard library
- ajax support was added
- addAjaxAction method was added to p4a_widget class
- P4A_Widget::redesign() method was added (for ajax)
- scriptaculos 1.6.1 was added to the default theme
- PEAR::DB was dropped in favour of PEAR::MDB2 (PEAR::DB was abandoned by its developers)
- MDB2-2.0.3, MDB2_Driver_mssql-1.0.0, MDB2_Driver_mysql-1.0.3, MDB2_Driver_mysqli-1.0.3, MDB2_Driver_oci8-0.2.6, MDB2_Driver_pgsql-1.0.3, MDB2_Driver_sqlite-1.0.2 were installed
- a bug on IE file download under SSL was fixed
- P4A_Data_Source::firstRow(), P4A_Data_Source::nextRow(), P4A_Data_Source::prevRow() and P4A_Data_Source::lastRow() now support the "move pointer" parameter
- P4A_Table movements now won't move the data source pointer
- P4A_Table movements are now ajax triggered
- a loader spinner was added
- ie7 javascript library was dropped and some ie fixes were introduced
- P4A_AJAX_DEBUG constant was added (creates p4a_ajax_debug.txt file under session.save_path directory)
- P4A_AJAX_ENABLED constant was added (automatically disabled on handhelds)
- P4A_Mask's beforeMoveRow, onMoveRow and afterMoveRow triggers were deleted (they were mark as deprecated)
- data type autodetection was ported to MDB2 datatypes