@@ -1,8 +1,13 @@
-rich_textarea_loaded = false;
-
 function executeEvent(object_name, action_name, param1, param2, param3, param4)
 {
-	if (rich_textarea_loaded) tinyMCE.triggerSave();
+	if (typeof tinyMCE != "undefined") {
+		for (var i in tinyMCE.instances) {
+			var instance = tinyMCE.instances[i];
+			if (tinyMCE.isInstance(instance) && instance.getDoc() != null) {
+				instance.triggerSave();
+			}
+		}
+	}
 	
 	if (!param1) param1 = "";
 	if (!param2) param2 = "";
@@ -53,11 +58,13 @@ function setFocus(id)
 function executeAjaxEvent(object_name, action_name, param1, param2, param3, param4)
 {
 	showLoading();
-	if (rich_textarea_loaded) {
-		tinyMCE.triggerSave();
-		rich_textarea_loaded = false;
+	for (var i in tinyMCE.instances) {
+		var instance = tinyMCE.instances[i];
+		if (tinyMCE.isInstance(instance) && instance.getDoc() != null) {
+			instance.triggerSave();
+		}
 	}
-	
+
 	if (!param1) param1 = "";
 	if (!param2) param2 = "";
 	if (!param3) param3 = "";
